--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -72,7 +72,12 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  html {
+    scrollbar-gutter: stable;
   }
 }
